# DFA_simulator

./: .editorconfig  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  animator.py  dfa_engine.py  main.py  pyproject.toml  renderer.py  ui.py
docs/: ARCHITECTURE.md  USAGE.md
tests/: __init__.py  test_dfa.py
